[project]
name = "lerobot-trossen"
version = "0.1.0"
description = "Trossen Robotics LeRobot integration"
requires-python = ">=3.10"

dependencies = [
  "lerobot_robot_trossen>=0.1.0",
  "lerobot_teleoperator_trossen>=0.1.0",
  "trossen-slate>=0.0.3",
]

[tool.uv.sources]
lerobot_robot_trossen = { workspace = true }
lerobot_teleoperator_trossen = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true
